[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/music/townie_loop.mp3" type="AudioStream" id=1]
[ext_resource path="res://farm.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/open_sans_condensed/open_sans_condensed_bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://main.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/341695__projectsu012__coins-1.wav" type="AudioStream" id=5]
[ext_resource path="res://words.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sounds/93100__cgeffex__whip-crack-01.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/fonts/open_sans_condensed/open_sans_condensed_bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Scenes/LightningBolt.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 37
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_space = 2
font_data = ExtResource( 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 24 )

[node name="Main" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Farm" parent="." instance=ExtResource( 2 )]

[node name="VBoxContainer" type="VBoxContainer" parent="Farm"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 492.0
margin_top = 280.0
margin_right = 537.0
margin_bottom = 324.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Farm/VBoxContainer"]
margin_right = 45.0
margin_bottom = 20.0
text = "PLAY"

[node name="LightningBolt" parent="." instance=ExtResource( 9 )]

[node name="WordsLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="Words" parent="WordsLayer" instance=ExtResource( 6 )]
pause_mode = 1
visible = false

[node name="Score" type="Label" parent="WordsLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = 60.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.780392, 0.847059, 0, 1 )
text = "SCORE 0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Congratulations" type="RichTextLabel" parent="WordsLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -52.0
margin_right = 232.0
margin_bottom = 52.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][color=green][wave amp=50 freq=2]CONGRATULATIONS
HARVEST COMPLETE[/wave][/color][/center]"
text = "CONGRATULATIONS
HARVEST COMPLETE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 928, 40 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 32, 8 )
shape = SubResource( 2 )

[node name="Coin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="CalmMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 1 )
autoplay = true

[node name="WhipCrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="MenuLayer" type="CanvasLayer" parent="."]
layer = 7

[node name="PlayButton" type="Button" parent="MenuLayer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -17.0
margin_right = 25.0
margin_bottom = 17.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.780392, 0.847059, 0, 1 )
text = "PLAY"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="word_missed" from="WordsLayer/Words" to="." method="_on_Words_word_missed"]
[connection signal="word_typed" from="WordsLayer/Words" to="." method="_on_Words_word_typed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="pressed" from="MenuLayer/PlayButton" to="." method="_on_PlayButton_pressed"]
